--- a/media/css/l10n/it/intl.css
+++ b/media/css/l10n/it/intl.css
@@ -1,4 +1,7 @@
 /* Donation appeal button */
+.donate-banner #donate-banner-left {
+    padding: 0.6875rem 0.75rem;
+}
 .donate-banner #donate-banner-left > b {
     font-size: 1.9rem;
 }
